--- a/Morphological_image_analyzer/Morphological_image_analyzer/Morphological_image_analyzer.csproj
+++ b/Morphological_image_analyzer/Morphological_image_analyzer/Morphological_image_analyzer.csproj
@@ -69,6 +69,7 @@
     <Compile Include="DilationCalculator.cs" />
     <Compile Include="DilationOfErosionCalculator.cs" />
     <Compile Include="ErosionCalculator.cs" />
+    <Compile Include="ErosionOfDilationCalculator.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
