Added new button for image scanner and implemented base version of FloodFill algorithm

--- a/Morphological_image_analyzer/Morphological_image_analyzer/Morphological_image_analyzer.csproj
+++ b/Morphological_image_analyzer/Morphological_image_analyzer/Morphological_image_analyzer.csproj
@@ -81,10 +81,17 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="ModalWindowAnaliseResult.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ModalWindow.xaml.cs">
       <DependentUpon>ModalWindow.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="ModalWindowAnaliseResult.xaml.cs">
+      <DependentUpon>ModalWindowAnaliseResult.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
