Implemented simple version of counting objects in image

--- a/Morphological_image_analyzer/Morphological_image_analyzer/Morphological_image_analyzer.csproj
+++ b/Morphological_image_analyzer/Morphological_image_analyzer/Morphological_image_analyzer.csproj
@@ -72,6 +72,8 @@
     <Compile Include="DilationOfErosionCalculator.cs" />
     <Compile Include="ErosionCalculator.cs" />
     <Compile Include="ErosionOfDilationCalculator.cs" />
+    <Compile Include="FloodFillService.cs" />
+    <Compile Include="ImageAnalyzer.cs" />
     <Compile Include="IMorphologicalCalculator.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
